--- a/ErmiyasPersonalPortofolio/src/App.module.css
+++ b/ErmiyasPersonalPortofolio/src/App.module.css
@@ -1,19 +1,12 @@
 /* src/App.module.css */
 
+@import "./vars.css";
 
-/* adding colors  separately*/
+.App{
 
-:root{
-
-    /* colorsss */
-
-    --color-text: white;
-    --color-primary: lightBlue;
-    --color-secondary: darkBlue;
-    --color-dark: blue;
-    --color-bg: lightpink;
-
-    /* adding variable for the web font*/
-    --font-robot:"Roboto";
+    /* set the backgrnd color and make the width an height 100% */
+    background-color: var(--color-bg);
+    width: 100%;
+    height: 100%;
 }
 
