--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -1,38 +1,47 @@
-.App {
-  text-align: center;
+.app-container {
+  width: 100%;
+  padding: 20px;
+  background-color: #e0f2fa;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.logo-nav-container {
+  flex: 0 0 auto;
+   
+  align-items: center; 
+  padding: 30px 10;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.logo {
+  flex: 0; 
+  margin-right: 0px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.logo img {
+  width: 800px; /* logo size */
+}
+
+.nav-links-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 200px; 
+  margin: 0; 
 }
 
-.App-link {
-  color: #61dafb;
+
+.nav-link {
+  color: #000000;
+  font-weight: Bold;
+  font-size: 25px;
+  text-decoration: none;
+  transition: color 0.3s ease; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-link:hover {
+  color: #007BFF;
+}
+
+.page-content {
+  padding: 40px;
+  font-size: 80px;
+  line-height: 1.6;
 }
