--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -84,9 +84,9 @@
   flex-direction: column;
   justify-content: center;
   align-items:center;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
-  line-height: 0.3;
+  line-height: 0.1;
   margin-left: 40px;
 }
 
