--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -93,9 +93,11 @@
   align-items:center;
   font-family: 'Montserrat', sans-serif;
   font-size: 20px;
-  line-height: 0.1;
-  margin-top: 80px;
-  margin-left: 40px;
+  line-height: 0;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 100px;
+  margin-left: 100px;
 }
 
 
@@ -105,8 +107,8 @@
   display: flex;
   justify-content: center;
   gap: 500px;
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 /* Page content container */
