--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -76,16 +76,25 @@
 }
 
 
+
+
+
+
+
+
 /* Menu Items Container */
 .menuItems {
-  font-size: 25px;
-  font-family: Georgia, cursive, sans-serif;
-  font-weight: bold;
+  font-family: 'Courier New', monospace; 
+  font-weight: bolder;
+  font-size: 70px;
   list-style-type: none;
   display: flex;
-  gap: 40px; 
-  justify-content: flex-start;
-  
+
+ 
+  padding: 60px; 
+  padding-top: 100px;
+  padding-bottom: 100px;
+  align-items: center;
 }
 
 /* Remove bullet points */
@@ -96,6 +105,7 @@ ul {
 
 li {
   list-style-type: none; 
+  margin: 50px 0; /* this is fr adding space between each menu item vertically */
 }
 
 /* Remove underline from links */
@@ -105,57 +115,56 @@ a {
   font-weight: bold;
 }
 
-
 /* Add hover effect for links */
 a:hover {
   color: #007bff; 
 }
 
-/* Flexbox styling for spacing */
-.menuList {
+/* first menu list styling*/
+.firstList {
   display: flex; 
-  gap: 40px; 
   flex-direction: column;
-  justify-content: flex-start;
+  align-items: left;
+  padding-left: 50px;
+  padding-bottom: 50;
+  
+}
+
+/* second half  menu list styling*/
+.secondList {
+  display: flex; 
+  flex-direction: column;
+  padding-left: 250px;
+  padding-bottom: 250;
 }
 
 /* Adjust menu button */
 .menuBtn {
-  flex: 1;
   color: black;
-  cursor: pointer;
-  font-size: 30px;
-  font-family: Georgia, cursive, sans-serif;
-  font-weight: bold;
 
-  margin-bottom: 20px; 
-  padding-left: 250px; /* this isss the space btwn close btn an hireme icon */
-  padding-right: 20px; 
-  padding-top: 20px; 
-  font-size: 50px;
+  font-size: 60px;
+  font-family: 'Courier New', monospace; 
+  font-weight: bold;
+  padding-left: 450px;
+  padding-left: 450px;
+
 }
+
+
+
 
 /* Space between list items */
-.menuList li {
-  margin-bottom: 20px; 
-  padding-left: 50px; 
-  padding-right: 20px; 
-  padding-top: 50px; 
+.listMsg {
+  font-family: 'Courier New', monospace; 
+  font-size: 20px;
+  font-weight: normal;
+  padding: 1px;
 }
 
 
 
 
-/* Change background color of buttons on hover */
-.tablink:hover {
-  width: auto;
-  height: auto;
-  border-radius: 5px;
-  font-size: 25px;
-  font-family: Georgia, cursive, sans-serif;
-  font-weight: bold;
-  list-style-type: none;
-}
+
 
 /* Default styles for tab content */
 .tabcontent {
@@ -168,11 +177,13 @@ a:hover {
 /* Navigation links container */
 .headerNavLink {
   padding-left: 20px;
-  font-family: Georgia, cursive, sans-serif;
+  font-family: 'Courier New', monospace; 
   font-weight: bold;
-  margin: 0 120px;
+  margin: 0 150px;
   padding-bottom: 50px;
   padding-top: 50px;
+
+  transition: none;
   
   text-decoration: none;
   font-size: 25px;
@@ -180,8 +191,8 @@ a:hover {
 
 /* Styling for navigation links */
 .nav-link {
-  padding-left: 20px;
-  font-family: Georgia, cursive, sans-serif;
+  padding-left: 25px;
+  font-family: 'Courier New', monospace; 
   font-weight: bold;
   margin: 0 120px;
   text-decoration: none;
