--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -86,14 +86,14 @@
 .menuItems {
   font-family: 'Courier New', monospace; 
   font-weight: bolder;
-  font-size: 70px;
+  font-size: 50px;
   list-style-type: none;
   display: flex;
-
- 
-  padding: 60px; 
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding: auto;
+  padding-top: 50px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
   align-items: center;
 }
 
@@ -105,7 +105,7 @@ ul {
 
 li {
   list-style-type: none; 
-  margin: 50px 0; /* this is fr adding space between each menu item vertically */
+  margin: 10px 0; /* this is fr adding space between each menu item vertically */
 }
 
 /* Remove underline from links */
@@ -124,9 +124,10 @@ a:hover {
 .firstList {
   display: flex; 
   flex-direction: column;
-  align-items: left;
-  padding-left: 50px;
-  padding-bottom: 50;
+
+  padding-left: 150px;
+  padding-bottom: 250;
+  padding-top: 250;
   
 }
 
@@ -136,6 +137,7 @@ a:hover {
   flex-direction: column;
   padding-left: 250px;
   padding-bottom: 250;
+  padding-top: 250;
 }
 
 /* Adjust menu button */
@@ -158,7 +160,8 @@ a:hover {
   font-family: 'Courier New', monospace; 
   font-size: 20px;
   font-weight: normal;
-  padding: 1px;
+  padding: 1%;
+  padding-left: 100px;
 }
 
 
