I've updated several icons and added Font Awesome icons that are available in React. Additionally, I renamed a few files for consistency and to maintain clean code. Currently, the basic layout and styling of the personal website look good. Although I may make adjustments going forward, everything is functioning well, and the design is user-friendly. Moving forward, I'll focus on adding personal information, projects, and content for each page, as well as some animated elements to give the website a more modern feel.

--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 10px;
   border-bottom: 2px solid #ccc;
 }
 
@@ -51,7 +51,9 @@
 
 
 
-/* Second row: Social media icons and menu list */
+/* Second row: Social media icons and menu list 
+
+i dont think i need this.. i will delete it later,.nwu*/
 .socialMediaAndMenu {
   display: flex;
   flex-direction: row;
