--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -253,4 +253,23 @@ a:hover {
   animation: shake 0.5s ease-in-out;
 }
 
+.titles{
+font-family: 'Courier New', monospace; 
+text-decoration: none;
+padding-bottom: 50px;
+padding-top: 50px;
+padding-left: 50px;
+font-size: 50px;
+color:blue;
+font-weight: bolder;
+}
 
+.subTitles{
+  font-family: 'Courier New', monospace; 
+  text-decoration: none;
+  padding-bottom: 50px;
+  padding-left: 75px;
+  font-size: 35px;
+  color: black;
+  font-weight: bold;
+  }
