Added another btn on exprience page that will help employees easly to get a download access and view  of my achievement paper

--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -267,10 +267,21 @@ font-weight: bolder;
 .subTitles{
   font-family: 'Courier New', monospace; 
   text-decoration: none;
-  padding-bottom: 25px;
+  padding-bottom: 10px;
   padding-left: 75px;
-  padding-top: 25px;
-  font-size: 35px;
+  padding-top: 10px;
+  font-size: 25px;;
   color: black;
-  font-weight: bolder;
+  font-weight: bold;
   }
+
+  .subSecTitle{
+    font-family: 'Courier New', monospace; 
+    text-decoration: none;
+    padding-bottom: 10px;
+    padding-left: 75px;
+    padding-top: 10px;
+    font-size: 25px;
+    color: black;
+    }
+    
