--- a/reactapp/src/components/ProjectsPage.css
+++ b/reactapp/src/components/ProjectsPage.css
@@ -80,3 +80,10 @@
     margin: 0;
 }
 
+.centered-project-box {
+    margin: 0 auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
