--- a/reactapp/src/components/ProjectsPage.css
+++ b/reactapp/src/components/ProjectsPage.css
@@ -2,7 +2,7 @@
 
 
 .projects {
-    font-family: 'Arial', sans-serif;
+    font-family: 'Courier New', monospace;
     background-color: #A5F5DA;
     text-align: center;
     padding: 20px;
