Changed few background colors for pages and few of the website borders as well updated few of the images as well added a video frame for hobby page.

--- a/reactapp/src/components/ProjectsPage.css
+++ b/reactapp/src/components/ProjectsPage.css
@@ -10,7 +10,7 @@
 
 .welcome-text, .progress-text {
     font-family: 'Courier New', monospace;
-    color: #333;
+    color: #c31c1c;
     font-size: 36px;
     font-weight: bold;
     margin: 20px 0;
