Added a conditional statemnt for my project page to be able to users to visit my git hub repo for each project. and in other pages I have changed or modified their css styling .

--- a/reactapp/src/components/HobbiesPage.css
+++ b/reactapp/src/components/HobbiesPage.css
@@ -1,7 +1,7 @@
 /*CSS file for Hobbies  Page only*/
 
 .hobbies-container {
-    font-family: 'Courier New', monospace; 
+    font-family: 'Arial', monospace; 
     background-color: #F4B8B8;
     padding: 20px;
     text-align: center;
