--- a/reactapp/src/App.css
+++ b/reactapp/src/App.css
@@ -1,9 +1,8 @@
-
 /* General App Container */
 .app-container {
   width: 100%;
   height: auto;
-  background: #E8F9FB;
+  background:#F5F5DC
 }
 
 /* Flexbox container for the header (Logo, Menu/Close, Hire Me) */
@@ -25,9 +24,8 @@
   width: 75px;
   height: auto;
   padding-top: 5px;
-
+  padding-left: 35px;
 }
-
 
 .hireMeIcon {
   flex: 1;
@@ -36,10 +34,9 @@
   align-items: center;
   padding-top: 5px;
   font-size: 30px;
-  font-family: 'Courier New', monospace; 
+  font-family: 'Arial', monospace; 
   font-weight: bold;
 }
-
 
 /* Hire me icon image styling */
 .hireMeIcon img {
@@ -49,10 +46,7 @@
   display: block; 
 }
 
-
-
 /* Second row: Social media icons and menu list 
-
 i dont think i need this.. i will delete it later,.nwu*/
 .socialMediaAndMenu {
   display: flex;
@@ -63,9 +57,6 @@ i dont think i need this.. i will delete it later,.nwu*/
   padding-left: 50px;
   padding-right: 50px;
 }
-
-
-
 
 /* Social media icons styling */
 .socialMediaIconsContainer {
@@ -79,16 +70,9 @@ i dont think i need this.. i will delete it later,.nwu*/
   height: 30px;
 }
 
-
-
-
-
-
-
-
 /* Menu Items Container */
 .menuItems {
-  font-family: 'Courier New', monospace; 
+  font-family: 'Arial', monospace; 
   font-weight: bolder;
   font-size: 50px;
   list-style-type: none;
@@ -128,7 +112,6 @@ a:hover {
 .firstList {
   display: flex; 
   flex-direction: column;
-
   padding-left: 150px;
   padding-bottom: 250;
   padding-top: 250;
@@ -148,26 +131,21 @@ a:hover {
 .menuBtn {
   color: black;
   font-size: 60px;
-  font-family: 'Courier New', monospace; 
+  font-family: 'Arial', monospace; 
   font-weight: bold;
   padding-left: 450px;
   padding-left: 450px;
 }
 
-
-
-
 /* Space between list items */
 .listMsg {
-  font-family: 'Courier New', monospace; 
+  font-family: 'Arial', monospace; 
   font-size: 20px;
   font-weight: normal;
   padding: 1%;
   padding-left: 100px; 
   box-shadow: 1px 5px 5px -3px #F71B9D;
 }
-
-
 
 /* Default styles for tab content */
 .tabcontent {
@@ -177,48 +155,7 @@ a:hover {
   text-align: left;
 }
 
-/* Navigation links container */
-.headerNavLink {
-  padding-left: 20px;
-  font-family: 'Courier New', monospace; 
-  font-weight: bold;
-  margin: 0 150px;
-  padding-bottom: 50px;
-  padding-top: 50px;
-  transition: none;
-  text-decoration: none;
-  font-size: 25px;
-}
 
-.footerNavLink{
-
-  padding-left: 20px;
-  font-family: 'Courier New', monospace; 
-  font-weight: bold;
-  margin: 0 150px;
-  padding-bottom: 50px;
-  padding-top: 50px;
-  transition: none;
-  text-decoration: none;
-  font-size: 25px;
-
-}
-
-/* Styling for navigation links */
-.nav-link {
-  padding-left: 25px;
-  font-family: 'Courier New', monospace; 
-  font-weight: bold;
-  margin: 0 120px;
-  text-decoration: none;
-  padding-bottom: 50px;
-  font-size: 25px;
-}
-
-/* Hover effect for navigation links */
-.nav-link:hover {
-  color: #cc0077;
-}
 
 .contentImage {
   padding-left: 300px;
@@ -231,14 +168,13 @@ a:hover {
   width:auto;
 }
 
-
 .imageAndIntroPara {
   display: flex;
   margin-bottom: 20px;
   margin-top: 80px;
   margin-bottom: 80px;
   padding-left: 10px;
-  font-family: 'Courier New', monospace; 
+  font-family: 'Arial', monospace; 
   font-size: 20px;
 }
 
@@ -254,7 +190,7 @@ a:hover {
 }
 
 .titles{
-font-family: 'Courier New', monospace; 
+font-family: 'Arial', monospace; 
 text-decoration: none;
 padding-bottom: 25px;
 padding-top: 50px;
@@ -265,7 +201,7 @@ font-weight: bolder;
 }
 
 .subTitles{
-  font-family: 'Courier New', monospace; 
+  font-family: 'Arial', monospace; 
   text-decoration: none;
   padding-bottom: 10px;
   padding-left: 75px;
@@ -276,7 +212,7 @@ font-weight: bolder;
   }
 
   .subSecTitle{
-    font-family: 'Courier New', monospace; 
+    font-family: 'Arial', monospace; 
     text-decoration: none;
     padding-bottom: 10px;
     padding-left: 75px;
@@ -285,20 +221,20 @@ font-weight: bolder;
     color: black;
     }
 
-    /* Animation for "Close" Button */
+/* Animation for "Close" Button */
 .shake-animation {
   animation: shake 0.5s ease-in-out;
 }
-
 
 /* Adjust menu button */
 .menuBtn {
   color: black;
   font-size: 60px;
-  font-family: 'Courier New', monospace;
+  font-family: 'Arial', monospace;
   font-weight: bold;
   transition: transform 0.3s ease, color 0.3s ease;
 }
+
 .menuBtn:hover {
   color: #cc0077;
   transform: scale(1.1);
@@ -309,8 +245,44 @@ font-weight: bolder;
   cursor: pointer;
 }
 
-/* Hover effect for Tab Link Button */
-.tablink:hover {
-  transition: transform 0.3s ease, color 0.3s ease;
-  transform: scale(1.09);
+.footerNavLink {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  padding-top: 150px;
+  padding-bottom: 150px;
+  padding-left: 150px;
+  padding-right: 150px;
 }
+
+.nav-link {
+  font-family: 'Arial', monospace;
+  text-decoration: none;
+  padding-left: 20px;
+  transition: box-shadow 0.3s ease; 
+  box-shadow: 1px 5px 5px -3px #FA5252;
+  font-size: 35px;
+  font-weight: bolder;
+}
+
+.headerNavLink {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  padding-top: 150px;
+  padding-bottom: 150px;
+  padding-left: 150px;
+  padding-right: 150px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
