--- a/reactapp/src/components/ProjectPage.css
+++ b/reactapp/src/components/ProjectPage.css
@@ -1,3 +1,7 @@
+
+/* css file for project page */
+
+
 /*CSS file for projects Page only*/
 
 
@@ -6,44 +10,38 @@
     background-color: #A5F5DA;
     text-align: center;
     padding: 20px;
-
-    padding-top: 5px;
-    padding-left: 35px;
-}
-
-.toChangeTheLogoPadding img {
-    padding-left: 35px !important;
-    padding-top: 5px;
-}
+  }
   
-.welcome-text, .progress-text {
+  
+  
+  .welcome-text, .progress-text {
     font-family: 'Arial', monospace;
     color: #c31c1c;
     font-size: 36px;
     font-weight: bold;
     margin: 20px 0;
-}
-
-.profile-pic-container {
+  }
+  
+  .profile-pic-container {
     margin: 30px 0;
-}
-
-.profile-pic {
+  }
+  
+  .profile-pic {
     width: 300px;
     height: 300px;
     border-radius: 50%;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-}
-
-.projects-list {
+  }
+  
+  .projects-list {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
     margin: 30px 0;
-}
-
-.project-box {
+  }
+  
+  .project-box {
     background-color: #A5F5DA;
     border: 3px solid #FA5252;
     padding: 20px;
@@ -53,53 +51,52 @@
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     cursor: pointer;
-}
-
-.project-box:hover {
+  }
+  
+  .project-box:hover {
     transform: translateY(-5px);
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.project-icon {
+  }
+  
+  .project-icon {
     width: 50px;
     height: 50px;
     margin-bottom: 10px;
-}
-
-.project-title {
+  }
+  
+  .project-title {
     font-size: 20px;
     color: #2a9d8f;
     margin: 10px 0;
-}
-
-.tech-stack {
+  }
+  
+  .tech-stack {
     font-size: 14px;
     color: #666;
     margin-top: 10px;
-}
-
-.links {
+  }
+  .links{
     font-size: 14px;
-    color: #f20505;
-    font-weight: bold;
+    color: #16b980;
     margin-top: 10px;
-}
-
-
-.coding-icon {
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  .coding-icon {
     margin-top: 50px;
     width: 150px;
     height: 150px;
-}
-
-.progress-text p {
+  }
+  
+  .progress-text p {
     margin: 0;
-}
-
-.centered-project-box {
+  }
+  
+  .centered-project-box {
     margin: 0 auto;
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-}
+  }
